@@ -24,6 +24,7 @@ added round(x,y) function (decimal digit precision)
 added ncr(n,r) and npr(n,r) functions (combination and permutation)
 fixed issue #33: exponential notation misnamed
 fixed issue #32: crash when inserting ( after variable
+added engineering notation
 
 SpeedCrunch 0.7
 ---------------
